# etcpak

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: doc.yml  python-package.yml  release.yml
etcpak/: __init__.py  __init__.pyi  _cpufeatures.pyi
src/: check_cpufeatures.cpp  check_cpufeatures.hpp  cpufeatures.cpp  dummy.cpp  pybc7params.hpp  pylink.cpp
src/etcpak/: BlockData.cpp  BlockData.hpp  ProcessDxtc.cpp  ProcessRGB.cpp
tests/: test_main.py
